# tpfand

./: .cproject  .gitignore  .project  CMakeLists.txt  INSTALL  LICENSE  README.md  tpfand.service
cfg/: tpfand.conf
src/: CMakeLists.txt  TpFan.cpp  TpFan.h  TpTempRegulator.cpp  TpTempRegulator.h  TpTemperature.cpp  TpTemperature.h  main.cpp  stdincludes.h
